--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -10,6 +10,7 @@ services:
       dockerfile: webapi/Dockerfile.development
       args:
         - configuration=Debug
+        - PORT=5050
     ports:
       - 5050:5050
     environment:
