--- a/webapi/Dockerfile
+++ b/webapi/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+ARG PORT
+EXPOSE $PORT
 
 ENV ASPNETCORE_URLS=http://*:$PORT
 
