--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -77,6 +77,8 @@ jobs:
         with:
           context: .
           file: ./webapi/Dockerfile
+          build-args: |
+            PORT=${{ env.PORT }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
