add apod and redis config section
- update appsettings
- create config model

--- a/webapi/appsettings.Development.json
+++ b/webapi/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "NasaApi": {
+    "ApiKey": "",
+    "Count": ""
+  },
+  "ConnectionStrings": {
+    "Redis": "redis://<username>:<password>@<host>:<port>"
   }
 }
