--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NasaApi": {
+    "ApiKey": "",
+    "Count": ""
+  },
+  "ConnectionStrings": {
+    "Redis": "redis://<username>:<password>@<host>:<port>"
+  }
 }
