Update GitHub workflows and configuration for CodeQL analysis
- Changed Dependabot schedule for npm and nuget updates from weekly to monthly, and added ignore rules for minor and patch updates.
- Added CodeQL configuration file to define analysis settings for JavaScript and C# projects.
- Created a new GitHub Actions workflow for CodeQL analysis, scheduled to run weekly, with steps to set up the environment and perform analysis on the specified languages.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,13 +8,21 @@ updates:
   # Enable version updates for npm
   - package-ecosystem: "npm"
     directory: "/reactapp"
-    # Check the npm registry for updates every day (weekdays)
+    # Check the npm registry for updates monthly
     schedule:
-      interval: "weekly"
+      interval: "monthly"
+    # Ignore minor and patch updates
+    ignore:
+      - dependency-type: "direct"
+        update-types: ["version-update:semver-minor", "version-update:semver-patch"]
 
   # Enable version updates for nuget
   - package-ecosystem: "nuget"
     directory: "/webapi"
-    # Check for updates once a week
+    # Check for updates monthly
     schedule:
-      interval: "weekly"
+      interval: "monthly"
+    # Ignore minor and patch updates
+    ignore:
+      - dependency-type: "direct"
+        update-types: ["version-update:semver-minor", "version-update:semver-patch"]
