--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,7 @@ updates:
       interval: "monthly"
     # Ignore minor and patch updates
     ignore:
-      - dependency-type: "direct"
+      - dependency-name: "*"
         update-types: ["version-update:semver-minor", "version-update:semver-patch"]
 
   # Enable version updates for nuget
@@ -24,5 +24,5 @@ updates:
       interval: "monthly"
     # Ignore minor and patch updates
     ignore:
-      - dependency-type: "direct"
+      - dependency-name: "*"
         update-types: ["version-update:semver-minor", "version-update:semver-patch"]
